# spectrometer-tests

./: .gitmodules  README.md  cabal.project  hie.yaml  spectrometer-tests.cabal
.github/workflows/: build.yml
test/: IntegrationSpec.hs  Repo.hs
test/Control/Carrier/Exec/: NixShell.hs
test/common-build-scripts/: elixir.sh
