cabal-version: 2.2
name:          spectrometer-tests
version:       0.1.0.0
license:       MPL-2.0
build-type:    Simple

common lang
  build-depends:      base >=4.12 && <4.15
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints

test-suite integration
  import:             lang
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            test.hs

  -- cabal-fmt: expand test
  other-modules:
    Control.Carrier.Exec.NixShell
    IntegrationSpec
    Repo

  build-tool-depends: hspec-discover:hspec-discover ^>=2.7.1
  build-depends:
    , fused-effects
    , hspec          ^>=2.7.1
    , path
    , path-io
    , spectrometer
    , text
